--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,17 @@
   height: 1em;
   margin-left: 0.5rem;
 }
+.btn{
+  color: white;
+  font-size: 1em;
+  font-weight: 700;
+  background-color: blueviolet;
+  padding: 0.8em 1.5em;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+  cursor:  pointer;
+}
 @media (min-width: 960px) {
   .card {
     flex-basis: calc(33.33% - 2rem);
